--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,7 +13,7 @@ jobs:
        - name: remove pkg and setting repo
          run: |
             sudo apt update && sudo apt install wget zip
-            wget -qO - https://github.com/SA-17/Recovery_builder/raw/main/scripts/cleanup.sh  | bash
+            wget -qO - https://raw.githubusercontent.com/hoaggggggg/Recovery_builder/main/scripts/cleanup.sh  | bash
             sudo -E apt-get -qq update
             sudo -E apt-get -qq install bc build-essential tar zip curl libstdc++6 git wget python gcc clang libssl-dev repo rsync flex curl  bison aria2
             sudo curl --create-dirs -L -o /usr/local/bin/repo -O -L https://storage.googleapis.com/git-repo-downloads/repo
@@ -38,7 +38,7 @@ jobs:
          run: |
               source config.sh
               cd work
-              wget -qO - https://github.com/SA-17/Recovery_builder/raw/main/scripts/bake.sh  | bash
+              wget -qO - https://raw.githubusercontent.com/hoaggggggg/Recovery_builder/main/scripts/bake.sh  | bash
 
        - name: Release recovery
          uses: softprops/action-gh-release@v1
